--- a/src/assets/styles/cmps/TaskPreview.scss
+++ b/src/assets/styles/cmps/TaskPreview.scss
@@ -172,3 +172,7 @@ audio {
         border-radius: 4px;
     }
 }
+
+.table-header {
+    padding-block-start: 10px;
+}
